<resources>
    <string name="app_name">PicWiz</string>
    <string name="logo">logo</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_or_register">or Register?</string>
    <string name="prompt_or_sign_in">or Sign in</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>

    <string name="error_email_empty">Email field cannot be empty</string>
    <string name="error_password_empty">Password field cannot be empty</string>
    <string name="error_username_empty">Username field cannot be empty</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_tagline">Tag Line</string>
    <string name="prompt_bio">Bio</string>
    <string name="action_done">Done</string>
    <string name="prompt_acc_settings">Account settings</string>
    <string name="prompt_tags">Tags</string>
    <string name="prompt_caption">Caption</string>
</resources>
