<LinearLayout
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.core.picwiz.ProfileSettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_acc_settings"
        android:id="@+id/textView" />

    <android.support.design.widget.TextInputLayout
        android:paddingTop="8dp"
        android:id="@+id/text_input_layout_name_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_text_name_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add your real name to PicWiz! Others will be able to recognize you easily. \nKeep it formal, this different from your username."/>

    <android.support.design.widget.TextInputLayout
        android:paddingTop="8dp"
        android:id="@+id/text_input_layout_tagline_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_tagline_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_tagline"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="It's ok to show off! one line about yourself. This is visible to all users."/>

    <android.support.design.widget.TextInputLayout
        android:paddingTop="8dp"
        android:id="@+id/text_input_layout_about_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_about_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_bio"
            android:inputType="textMultiLine"
            android:singleLine="false" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tell us and others something about yourself, we would love to know you"/>

    <Spinner
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner" />

</LinearLayout>
